# sequoia-openpgp-webapp

./: .gitignore  Cargo.toml  README.md  index.html  sequoia-pgp-guide-24131d86098a7ad0.js  sequoia-pgp-guide-24131d86098a7ad0_bg.wasm  sequoia-pgp-guide-d17d8b8f65957362.js  sequoia-pgp-guide-d41d3a091f21d42c.js  sequoia-pgp-guide-d41d3a091f21d42c_bg.wasm  sequoia-pgp-guide-e15ef14f1a86c4b0.js  sequoia-pgp-guide-ff0ac803ab762831_bg.wasm
src/: lib.rs  main.rs
src/components/atoms/: custom_button.rs  decrypted_text.rs  encrypted_text.rs  key.rs  main_title.rs  mod.rs  text_area_input.rs  text_input.rs
src/components/molecules/: custom_form.rs  decrypt_form.rs  encrypt_form.rs  mod.rs
