[package]
name = "sequoia-pgp-guide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sequoia-openpgp = { version = "*", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
anyhow = { version = "*" }
yew = "0.19"
gloo = "0.8.0" 
serde = "1.0.14"
serde_json = "1.0.87"
stylist = { version = "0.10.1", features = ["yew"] }
wasm-bindgen = "0.2.83"
web-sys = {versin = "", features = ["HtmlInputElement"]}